# RobotMake

./: .gitignore  .styleguide  .styleguide-license  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  deploy.py  requirements.txt
CMake/: DeployUtils.cmake  FindAprilTag.cmake  FindAprilTagLib.cmake  FindCameraServer.cmake  FindCsCore.cmake  FindHal.cmake  FindKauaiLabs.cmake  FindNiLibraries.cmake  FindNtCore.cmake  FindOpenCV.cmake  FindPathplanner.cmake  FindPhoenix.cmake  FindPhotonVision.cmake  FindRev.cmake  FindWpiLibNewCommands.cmake  FindWpiMath.cmake  FindWpiNet.cmake  FindWpiPackage.cmake  FindWpiUtil.cmake  FindWpilibc.cmake  Findapriltag.cmake  Findapriltaglib.cmake  Findcameraserver.cmake  Findchoreo.cmake  Findchoreolib.cmake  Findcscore.cmake  Findfieldimages.cmake  Findgoogletest.cmake  Findhal.cmake  Findhalsim_gui.cmake  Findimgui.cmake  Findlibssh.cmake  Findnavx.cmake  Findnilibraries.cmake  Findntcore.cmake  Findntcoreffi.cmake  Findopencv.cmake  Findpathplanner.cmake  Findpathplannerlib.cmake  Findphoenix.cmake  (+16 more)
deploy/: sample.txt
robotProgram/: CMakeLists.txt  Constants.h  RobotContainer.h
robotProgram/cpp/: CMakeLists.txt
robotProgram/cpp/ctre-swerve/: CMakeLists.txt  SimSwerveDrivetrain.cpp  SwerveDrivebase.cpp
robotProgram/include/: Autos.h  Constants.h  Robot.h  RobotContainer.h  Vision.h
robotProgram/include/auto/: Autos.h
robotProgram/include/ctre-swerve/: CTREPIDController.h  SimSwerveDrivetrain.h  SwerveDrivebase.h  SwerveModule.h  SwerveRequest.h
robotProgram/include/str/: Alert.h  CMakeLists.txt  CTREPIDController.h  DataUtils.h  DrivetrainTelemetry.h  LedPattern.h  LedSection.h  LedStrip.h  MockToF.h  SimSwerveDrivetrain.h  SwerveDrive.h  SwerveDriveSim.h  SwerveDrivebase.h  SwerveModule.h  SwerveRequest.h  SwerveTelemetry.h  Units.h  Vision.h
robotProgram/include/str/ledpatterns/: BlinkPattern.h  ChasePattern.h  FadePattern.h  KnightRiderPattern.h  RainbowPattern.h  SolidColorPattern.h  TachometerPattern.h
robotProgram/include/subsystems/: ClimberSubsystem.h  DrivebaseSubsystem.h  DrivetrainSubsystem.h  DunkerSubsystem.h  IntakeSubsystem.h  LedSubsystem.h  ShooterSubsystem.h
robotProgram/src/: Autos.cpp  CMakeLists.txt  Constants.cpp  Robot.cpp  RobotContainer.cpp
robotProgram/src/ctre-swerve/: CMakeLists.txt  CTREPIDController.cpp  SimSwerveDrivetrain.cpp  SwerveDrivebase.cpp  SwerveModule.cpp
robotProgram/src/str/: Alert.cpp  CMakeLists.txt  CTREPIDController.cpp  DataUtils.cpp  DrivetrainTelemetry.cpp  LedSection.cpp  LedStrip.cpp  MockToF.cpp  SimSwerveDrivetrain.cpp  SwerveDrive.cpp  SwerveDriveSim.cpp  SwerveDrivebase.cpp  SwerveModule.cpp  SwerveTelemetry.cpp
robotProgram/src/subsystems/: CMakeLists.txt  ClimberSubsystem.cpp  DrivebaseSubsystem.cpp  DrivetrainSubsystem.cpp  DunkerSubsystem.cpp  IntakeSubsystem.cpp  LedSubsystem.cpp  ShooterSubsystem.cpp
src/: main.cpp
src/main/deploy/choreo/: AmpSide.1.traj  AmpSide.2.traj  AmpSide.3.traj  AmpSide.traj  AmpSideSingle.1.traj  AmpSideSingle.2.traj  AmpSideSingle.traj  ChoreoTestPath.2.traj  ChoreoTestPath.traj  DriveInSquare.1.traj  DriveInSquare.2.traj  DriveInSquare.3.traj  DriveInSquare.4.traj  DriveInSquare.traj  FourNoteAuto.1.traj  FourNoteAuto.2.traj  FourNoteAuto.3.traj  FourNoteAuto.4.traj  FourNoteMiddle.1.traj  FourNoteMiddle.2.traj  FourNoteMiddle.3.traj  GetPodiumNote.1.traj  GetPodiumNote.2.traj  GetPodiumNote.traj  MiddleOfDriverStation.1.traj  MiddleOfDriverStation.2.traj  MiddleOfDriverStation.3.traj  MiddleOfDriverStation.4.traj  MiddleOfDriverStation.traj  MiddleSub.1.traj  MiddleSub.2.traj  MiddleSub.3.traj  MiddleSub.4.traj  MiddleSub.5.traj  MiddleSub.traj  RuinUrDay.1.traj  RuinUrDay.2.traj  RuinUrDay.3.traj  RuinUrDay.traj  RushForCenter.1.traj  (+11 more)
src/main/deploy/pathplanner/autos/: AmpSide.auto  AmpSideSingle.auto  ChoreoTestPath.auto  MiddleOfDriverStation.auto  MiddleSub.auto  New New Auto.auto  PodiumNote.auto  RuinUrDay.auto  SixNote.auto  Square.auto  ThreeMiddleSub.auto  ThreeNoteSource.auto
src/main/deploy/pathplanner/paths/: Example Path.path
vision/: CMakeLists.txt  aruco_nano.h  main.cpp
vision/aruco/: markerdetector.cpp  markerdetector_impl.cpp
